[gd_scene load_steps=30 format=3 uid="uid://c1gd14jafsrtp"]

[ext_resource type="Script" uid="uid://cp30teu368c5w" path="res://Script/door.gd" id="1_0g8fi"]
[ext_resource type="Texture2D" uid="uid://bxv6yt0627w4j" path="res://Asset/animated_door_glass_left.png" id="1_7w0x6"]
[ext_resource type="Texture2D" uid="uid://fyrg1238uvf2" path="res://Asset/animated_door_glass_right.png" id="2_g4bim"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1dwun"]
atlas = ExtResource("1_7w0x6")
region = Rect2(64, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl11s"]
atlas = ExtResource("1_7w0x6")
region = Rect2(80, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5qvj"]
atlas = ExtResource("1_7w0x6")
region = Rect2(96, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_601md"]
atlas = ExtResource("1_7w0x6")
region = Rect2(112, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kdun"]
atlas = ExtResource("1_7w0x6")
region = Rect2(0, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsgqf"]
atlas = ExtResource("1_7w0x6")
region = Rect2(0, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rtcc"]
atlas = ExtResource("1_7w0x6")
region = Rect2(0, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mcmf"]
atlas = ExtResource("1_7w0x6")
region = Rect2(16, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mevpk"]
atlas = ExtResource("1_7w0x6")
region = Rect2(32, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_digi5"]
atlas = ExtResource("1_7w0x6")
region = Rect2(48, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oin0v"]
atlas = ExtResource("1_7w0x6")
region = Rect2(64, 0, 16, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_p8tij"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dwun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl11s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5qvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_601md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kdun")
}],
"loop": false,
"name": &"close_door",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsgqf")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rtcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mcmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mevpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_digi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oin0v")
}],
"loop": false,
"name": &"open_door",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6ehvl"]
atlas = ExtResource("2_g4bim")
region = Rect2(64, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw1op"]
atlas = ExtResource("2_g4bim")
region = Rect2(80, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gp7h"]
atlas = ExtResource("2_g4bim")
region = Rect2(96, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4j74"]
atlas = ExtResource("2_g4bim")
region = Rect2(112, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlrj4"]
atlas = ExtResource("2_g4bim")
region = Rect2(0, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc5b6"]
atlas = ExtResource("2_g4bim")
region = Rect2(0, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yahe"]
atlas = ExtResource("2_g4bim")
region = Rect2(0, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_edui2"]
atlas = ExtResource("2_g4bim")
region = Rect2(16, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkywj"]
atlas = ExtResource("2_g4bim")
region = Rect2(32, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a8yk"]
atlas = ExtResource("2_g4bim")
region = Rect2(48, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh61b"]
atlas = ExtResource("2_g4bim")
region = Rect2(64, 0, 16, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_0pvek"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ehvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw1op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gp7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4j74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlrj4")
}],
"loop": false,
"name": &"close_door",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc5b6")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yahe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edui2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkywj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a8yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh61b")
}],
"loop": false,
"name": &"open_door",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mr75j"]
size = Vector2(32, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6m0dw"]
size = Vector2(32, 29)

[node name="Door" type="StaticBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_0g8fi")

[node name="LeftAnimated" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_p8tij")
animation = &"open_door"
autoplay = "default"

[node name="RightAnimated" type="AnimatedSprite2D" parent="."]
position = Vector2(16, -1)
sprite_frames = SubResource("SpriteFrames_0pvek")
animation = &"close_door"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_mr75j")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 8.5)
shape = SubResource("RectangleShape2D_6m0dw")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
